--- a/html/game.html
+++ b/html/game.html
@@ -5,16 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MEMO</title>
+    <link rel="stylesheet" href="../css/game.css">
 </head>
 
 <body>
-    <main>
+    <main class="play-area">
 
-        <body>
 
-        </body>
     </main>
 
+    <script src="../js/game.js"></script>
 </body>
+
 
 </html>
